--- a/index.html
+++ b/index.html
@@ -10,6 +10,17 @@
 	</head>
 
   <body>
+	  
+	  <!-- Header -->
+			<header id="header">
+				<div class="logo"><a href="index.html">BOUGHALMI & BENTAHA & DJABALLAH & ATTOUI</a></div>
+				<a href="#menu"><span>Menu</span></a>
+			</header>
+	  
+	  
+	  
+	  
+	  
 <h1>
   Consommation des données en arrière et en premier plan
 </h1>
