--- a/index.html
+++ b/index.html
@@ -8,7 +8,13 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 	</head>
+<style>
 
+    logo {
+        font: 10px sans-serif;
+    }
+	</style>
+	
   <body>
 	  
 	  <!-- Header -->
@@ -34,7 +40,7 @@
 <style>
 
     body {
-        font: 20px sans-serif;
+        font: 10px sans-serif;
     }
 
     .axis path,
